--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,22 @@
             "src": "src/main.jsx",
             "use": "@vercel/node"
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/src/main.jsx"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "*"
+                }
+            ]
+        }
     ]
-
 }
