--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "version": 2,
     "builds": [
+        {
+            "src": "package.json",
+            "use": "@vercel/vite"
+        }
     ],
     "routes": [
         { "handle": "filesystem" },
